--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <lombok.version>1.18.20</lombok.version>
 
         <junit.jupiter.version>5.8.2</junit.jupiter.version>
+        <assertj.version>3.23.1</assertj.version>
 
         <gson.version>2.8.5</gson.version>
         <cxf.version>3.3.4</cxf.version>
@@ -40,6 +41,11 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>${junit.jupiter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
         </dependency>
 
         <dependency>
